// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportInstanceListTest render comment 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody />
    </table>
    [object
     
    Object]
  </div>
</DocumentFragment>
`;

exports[`ReportInstanceListTest render object prop value instance 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody />
    </table>
    [object
     
    Object],[object
     
    Object]
  </div>
</DocumentFragment>
`;

exports[`ReportInstanceListTest render simple rows first - property bag rows second 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody />
    </table>
    [object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object],[object
     
    Object]
  </div>
</DocumentFragment>
`;

exports[`ReportInstanceListTest render snippet and path 1`] = `
<DocumentFragment>
  <div>
    <table
      class="instance-details"
    >
      <tbody />
    </table>
    [object
     
    Object],[object
     
    Object]
  </div>
</DocumentFragment>
`;
